split into subfolders for droid separation.

--- a/Source/default.conf
+++ b/Source/default.conf
@@ -9,6 +9,7 @@
 		AppPath : "~/Library/Caches/Xamarin/mtbs/builds/{appname}/*/bin/iPhoneSimulator/Debug/{appname}.app",
 		OutputPath : "./",
 		OSVersion : "latest",
-		Action: "execute"
+		Action: "execute",
+		SimulatorStatusMagicPath: ""
 	}
 }
