Added commandline switches to Xamarin.UITest and completed the neccessary modifications to have beautiful screenshots on iOS simulator

--- a/Source/default.conf
+++ b/Source/default.conf
@@ -6,7 +6,9 @@
 		DevicesPath: "~/Library/Developer/CoreSimulator",
 		IncludeDevices:  [ ],
 		ExcludeDevices:  [ ],
+		Languages: [],
 		AppPath : "~/Library/Caches/Xamarin/mtbs/builds/{appname}/*/bin/iPhoneSimulator/Debug/{appname}.app",
+		ComName : "com.{appname}",
 		OutputPath : "./",
 		OSVersion : "latest",
 		Action: "execute",
