--- a/Source/packages.config
+++ b/Source/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="JsonConfig" version="1.0.0" targetFramework="net452" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net452" />
-  <package id="Xamarin.UITest" version="1.2.0" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net451" />
+  <package id="Xamarin.UITest" version="1.3.8.1491-dev" targetFramework="net451" />
 </packages>
