--- a/Source/default.conf
+++ b/Source/default.conf
@@ -4,10 +4,10 @@
 	iOS: {
 		AppName: "myapp",
 		DevicesPath: "~/Library/Developer/CoreSimulator",
-		IncludeDevices:  [ ],
-		ExcludeDevices:  [ ],
-		Languages: [],
-		AppPath : "~/Library/Caches/Xamarin/mtbs/builds/{appname}/*/bin/iPhoneSimulator/Debug/{appname}.app",
+		IncludeDevices:  [ "iPad-Pro","iPad-2", "iPhone-4s", "iPhone-6s", "iPhone-6s-Plus", "iPhone-5s" ], 
+		ExcludeDevices:  [  "TV", "Watch" ],
+		Languages: ["en-US"],
+		AppPath : "{auto}",
 		ComName : "com.{appname}",
 		OutputPath : "./",
 		OSVersion : "latest",
