--- a/Source/xscreenshot.csproj
+++ b/Source/xscreenshot.csproj
@@ -73,6 +73,7 @@
     <Reference Include="Xamarin.UITest, Version=1.3.15.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Xamarin.UITest.1.3.15\lib\Xamarin.UITest.dll</HintPath>
       <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
   </ItemGroup>
   <ItemGroup>
