Missing magic path

--- a/Source/default.conf
+++ b/Source/default.conf
@@ -2,14 +2,14 @@
 # put comments into our JSON configuration files
 {
 	iOS: {
-		AppName: "myapp",
+		AppName: "",
 		DevicesPath: "~/Library/Developer/CoreSimulator",
 		IncludeDevices:  [ "iPad-Pro","iPad-2", "iPhone-4s", "iPhone-6s", "iPhone-6s-Plus", "iPhone-5s" ], 
 		ExcludeDevices:  [  "TV", "Watch" ],
 		Languages: ["en-US"],
 		AppPath : "{auto}",
 		ComName : "com.{appname}",
-		OutputPath : "./",
+		OutputPath : "./screenshots",
 		OSVersion : "latest",
 		Action: "execute",
 		SimulatorStatusMagicPath: ""
