--- a/Source/default.conf
+++ b/Source/default.conf
@@ -4,7 +4,7 @@
 	iOS: {
 		AppName: "",
 		DevicesPath: "~/Library/Developer/CoreSimulator",
-		IncludeDevices:  [ "iPad-Pro","iPad-2", "iPhone-4s", "iPhone-6s", "iPhone-6s-Plus", "iPhone-5s" ], 
+		IncludeDevices:  [ "iPad-Pro", "iPhone-6s-Plus" ], 
 		ExcludeDevices:  [  "TV", "Watch" ],
 		Languages: ["en-US"],
 		AppPath : "{auto}",
